--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,7 @@
   "C_Cpp_Runner.showCompilationTime": false,
   "C_Cpp_Runner.useLinkTimeOptimization": false,
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
-  "C_Cpp.errorSquiggles": "disabled"
+  "C_Cpp.errorSquiggles": "disabled",
+  "java.configuration.updateBuildConfiguration": "interactive",
+  "cmake.sourceDirectory": "D:/Studying/sec4/2nd_term/IT/Mobile App/App Project/trello_clone/trello/linux"
 }
