--- a/trello/pubspec.yaml
+++ b/trello/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   # Local storage / persistence
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  google_fonts: ^8.0.1
+  font_awesome_flutter: ^10.12.0
   
 
   
@@ -60,15 +62,12 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
