--- a/trello/pubspec.yaml
+++ b/trello/pubspec.yaml
@@ -42,7 +42,9 @@ dependencies:
   hive_flutter: ^1.1.0
   
 
-  
+  #font & icons
+  google_fonts: ^8.0.1
+  font_awesome_flutter: ^10.12.0
 
 dev_dependencies:
   flutter_test:
