--- a/trello/pubspec.yaml
+++ b/trello/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   # Local storage / persistence
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  crypto: ^3.0.3
   
 
   #font & icons
@@ -47,6 +48,8 @@ dependencies:
   font_awesome_flutter: ^10.12.0
 
 dev_dependencies:
+  hive_generator: ^2.0.1
+  build_runner: ^2.4.8
   flutter_test:
     sdk: flutter
 
