--- a/trello/pubspec.yaml
+++ b/trello/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
 
   # Launcher icon
   flutter_launcher_icons: ^0.13.1
+  bloc: ^9.2.0
 
 dev_dependencies:
   hive_generator: ^2.0.1
